# find_ocx

./: .gitattributes  .gitignore  .licenserc.toml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Findocx.cmake  README.md  SECURITY.md  TODO.md  cliff.toml  ocx.cmake  ocx.toml  renovate.json  taskfile.yml
.claude/rules/: dist-snapshot.md
.github/workflows/: ci.yml  pages.yml  release.yml  update-dist.yml
docs/: conf.py  examples.rst  index.rst  pyproject.toml  reference.rst
examples/find_package/: CMakeLists.txt
examples/frozen_index/: CMakeLists.txt
examples/package/: CMakeLists.txt  data.json
examples/project/: CMakeLists.txt  hello.sh  ocx.toml
scripts/: update_dist.py
taskfiles/: release.taskfile.yml
tests/: helpers.cmake  reconfigure_check.cmake  self_update_check.cmake
tests/fixtures/: bootstrap_off.cmake  floating_fatal.cmake  script_mode.cmake
tests/fixtures/bootstrap/: CMakeLists.txt
tests/fixtures/foreign_platform/: CMakeLists.txt
tests/fixtures/package/: CMakeLists.txt
tests/fixtures/package/subproject/: CMakeLists.txt
tests/fixtures/project_run/: CMakeLists.txt  ocx.toml
tests/fixtures/stale_lock/: CMakeLists.txt  ocx.toml
tests/index/ocx.sh/: cmake.json
